@@ -1,3 +1,9 @@
+2022-07-21 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* src/SDCCglue.c,
+	  support/regression/tests/bug-3461.c:
+	  Fix third and last part of bug #3461.
+
 2022-07-20 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* src/ds390/gen.c,
